added initial Neural Network model for gender recognition

--- a/calculation-core-service/.gitignore
+++ b/calculation-core-service/.gitignore
@@ -107,3 +107,7 @@ venv.bak/
 
 .idea/
 resources/dataset
+resources/archives
+resources/cropped-dataset
+resources/training/checkpoint
+resources/imdb.mat
