Separated the network in 2 for age and gender; changed the output clases; added implementation for plots save; fixed CORS bug; added the client

--- a/calculation-core-service/.gitignore
+++ b/calculation-core-service/.gitignore
@@ -111,3 +111,7 @@ resources/archives
 resources/cropped-dataset
 resources/training/checkpoint
 resources/imdb.mat
+resources/imdb_meta.tar
+resources/evaluate
+resources/wiki.mat
+resources/wiki.tar.gz
