--- a/calculation-api-service/src/main/resources/bootstrap.properties
+++ b/calculation-api-service/src/main/resources/bootstrap.properties
@@ -4,3 +4,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:9091/eureka
 server.port=8080
 spring.security.user.name=user
 spring.security.user.password=password
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.file-size-threshold=10MB
