--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -4,4 +4,6 @@ ADD ./target/eureka-server-1.0.0-SNAPSHOT.jar /app/
 
 CMD ["java", "-Xmx200m", "-jar", "/app/eureka-server-1.0.0-SNAPSHOT.jar"]
 
+HEALTHCHECK --interval=30s --timeout=30s CMD curl -f http://localhost:9091/actuator/health || exit 1
+
 EXPOSE 9091
